[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-avsr"
version = "2.2.0"
requires-python = ">=3.8,<3.12"
dependencies = [
    "deepspeed",
    "einops",
    "librosa",
    "mediapipe",
    "opencv-python",
    "python_speech_features",
    "soundfile",
    "torch",
    "torchvision",
    "transformers<=4.53.3",
]

[tool.setuptools.package-dir]
"reazonspeech.avsr" = "src"
